--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ authors = ["Stiopa Koltsov <stepan.koltsov@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-structopt = "0.3"
+structopt = "=0.3"
+atty = "=0.2"
