--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -1,1 +1,6 @@
+edition = "2021"
+group_imports = "StdExternalCrate"
 imports_granularity = "Item"
+merge_derives = false
+use_field_init_shorthand = true
+version = "Two"
