Test on macos and windows too

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,3 +23,41 @@ jobs:
         with:
           command: test
           args: --all --all-features
+  macos-stable:
+    name: macOS stable
+    runs-on: macos-latest
+    env:
+      RUST_BACKTRACE: 1
+    steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+        - name: Install Rust
+          uses: actions-rs/toolchain@v1
+          with:
+            profile: minimal
+            toolchain: stable
+            override: true
+        - name: Test
+          uses: actions-rs/cargo@v1
+          with:
+            command: test
+            args: --all --all-features
+  windows-stable:
+    name: Windows stable
+    runs-on: windows-latest
+    env:
+      RUST_BACKTRACE: 1
+    steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+        - name: Install Rust
+          uses: actions-rs/toolchain@v1
+          with:
+            profile: minimal
+            toolchain: stable
+            override: true
+        - name: Test
+          uses: actions-rs/cargo@v1
+          with:
+            command: test
+            args: --all --all-features
