--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.0.0"
 authors = ["Stiopa Koltsov <stepan.koltsov@gmail.com>"]
 edition = "2018"
 
+[workspace]
+members = ["xtask"]
+
 [lib]
 doctest = false
 
