--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: xtask
-          args: gen-help --check
+          args: gen-readme --check
   rustfmt-check:
     name: Check formatting
     runs-on: ubuntu-latest
